Trim commentary