@@ -84,9 +84,8 @@ public class UseJavaUtilBase64 extends Recipe {
                             "Already using a class named Base64 other than java.util.Base64. Manual intervention required."));
                 }
                 if (usesLegacyTypeUntranslatably(cu)) {
-                    // A legacy coder type appears somewhere this recipe cannot retype or rewrite. Migrating
-                    // only part of the file would either not compile or leave a sun.misc reference behind, so
-                    // leave the whole file for a human.
+                    // Migrating only part of the file would either not compile or leave a `sun.misc` reference
+                    // behind, so leave the whole file for a human
                     return cu;
                 }
                 J.CompilationUnit c = (J.CompilationUnit) super.visitCompilationUnit(cu, ctx);
@@ -98,31 +97,18 @@ public class UseJavaUtilBase64 extends Recipe {
             }
 
             /**
-             * True when a legacy coder type appears somewhere this recipe cannot translate. The recipe only
-             * retypes {@code BASE64Encoder} and {@code BASE64Decoder} themselves and only rewrites the
-             * overloads that have a {@code java.util.Base64} equivalent, so the file is left alone when:
-             * <ul>
-             * <li>an expression's static type is {@code CharacterEncoder} or {@code CharacterDecoder},
-             * for example a receiver declared as the legacy supertype, which {@link ChangeType} never
-             * retypes;</li>
-             * <li>a class extends one of the legacy coder types, or instantiates one with an anonymous
-             * class body, since {@code Base64.Encoder} and {@code Base64.Decoder} have no accessible
-             * constructor;</li>
-             * <li>a legacy coder method with no {@code java.util.Base64} equivalent is called, or a
-             * supported overload is called on a receiver that is not typed as {@code BASE64Encoder} or
-             * {@code BASE64Decoder}, for example a subclass declared in another compilation unit;</li>
-             * <li>a legacy coder method or constructor is used as a method reference, which is never
-             * rewritten;</li>
-             * <li>a value is passed to a method that keeps a {@code CharacterEncoder} or
-             * {@code CharacterDecoder} parameter.</li>
-             * </ul>
+             * True when a legacy coder type appears somewhere this recipe cannot translate: an expression statically
+             * typed as {@code CharacterEncoder} or {@code CharacterDecoder}, which {@link ChangeType} never retypes; a
+             * subclass or anonymous body, since {@code Base64.Encoder} has no accessible constructor; a call with no
+             * {@code java.util.Base64} equivalent, or on a receiver not typed as one of the two coders; a method
+             * reference, which is never rewritten; or a value passed to a parameter that stays a legacy coder.
              */
             private boolean usesLegacyTypeUntranslatably(J.CompilationUnit cu) {
                 AtomicBoolean found = new AtomicBoolean(false);
                 new JavaIsoVisitor<AtomicBoolean>() {
                     @Override
                     public J.Import visitImport(J.Import anImport, AtomicBoolean found) {
-                        // Imports are rewritten by ChangeType and are not a place a value can flow through
+                        // `ChangeType` rewrites imports, and no value flows through one
                         return anImport;
                     }
 
@@ -144,8 +130,7 @@ public class UseJavaUtilBase64 extends Recipe {
 
                     @Override
                     public J.NewClass visitNewClass(J.NewClass newClass, AtomicBoolean found) {
-                        // The type of an anonymous class creation is the anonymous class itself, so
-                        // walk the supertype chain to find `new BASE64Encoder() { ... }` as well
+                        // An anonymous creation's type is the anonymous class, so walk its supertypes too
                         if (newClass.getBody() != null &&
                             (TypeUtils.isAssignableTo(sunPackage + ".CharacterEncoder", newClass.getType()) ||
                              TypeUtils.isAssignableTo(sunPackage + ".CharacterDecoder", newClass.getType())) ||
